fix gen burn yaml wrong format issue
Signed-off-by: yangjian <jianyang@bestechnic.com>
Change-Id: I7765208c22b162d56e9518ea932b35435dc99625

--- a/bes2600w/BUILD.gn
+++ b/bes2600w/BUILD.gn
@@ -257,6 +257,7 @@ foreach(fs_bin, fs_list) {
     gen_fs_name = "genfs_${fs_name}"
     fs_size = fs_bin.fs_size
     fs_src = fs_bin.fs_src
+    block_size = fs_bin.block_size
     build_ext_component(gen_fs_name) {
       exec_path = rebase_path("resources")
       command = "./genfs.sh ${block_size} ${fs_size} ${fs_src} ${fs_name}"
