feat: add fs and hdf drivers
release from ohos_sdk 8d2a53f09f49fb1c11cc71fc81ecda44c0f22497 and wifi_app 24b52e802994bcb2d92f3cc1b52f575bb5201d0a

Signed-off-by: leihuang <leihuang@bestechnic.com>
Change-Id: I06535437553851951d2e55a1953d4925e5ebd966

--- a/bes2600w/BUILD.gn
+++ b/bes2600w/BUILD.gn
@@ -146,6 +146,8 @@ foreach(bin_file, bin_list) {
       deps = [
         ":${copy_lib_name}",
         "//base/startup/bootstrap_lite/services/source:bootstrap",
+        "//device/bestechnic/bes2600w/drivers:drivers",
+        "//device/bestechnic/bes2600w/sdk_liteos/fs_adapter:fs_adapter",
         "//device/bestechnic/bes2600w/sdk_liteos/sys_adapter:sys_adapter",
         "//drivers/adapter/khdf/liteos_m:hdf_lite",
         "//kernel/liteos_m:kernel",
