--- a/bes2600w/drivers/tests/BUILD.gn
+++ b/bes2600w/drivers/tests/BUILD.gn
@@ -1,5 +1,18 @@
+# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 import("//build/lite/config/component/lite_component.gni")
-import("../hdf.gni")
+import("../drivers.gni")
 
 static_library("driver_test") {
   sources = []
@@ -20,13 +33,21 @@ static_library("driver_test") {
     sources += [ "touch_test.c" ]
   }
 
+  if (drivers_display_enable) {
+    sources += [ "disp_test.c" ]
+  }
+
   include_dirs = hdf_include_dirs
   include_dirs += [
     "../gpio",
     "../i2c",
     "../spi",
     "../touch/include",
+    "../display/hal",
     "//device/bestechnic/" + board_name + "/sdk_liteos/sys_adapter/include",
+    "//drivers/peripheral/display/hal",
+    "//drivers/peripheral/display/interfaces/include",
+    "//drivers/peripheral/base",
     "//kernel/liteos_m/kal/cmsis",
     "//third_party/musl/porting/liteos_m/kernel/include",
   ]
