--- a/bes2600w/sdk_liteos/config.gni
+++ b/bes2600w/sdk_liteos/config.gni
@@ -59,6 +59,7 @@ board_cflags = [
     "-DOS_HEAP_SIZE=0x400000",
     "-DCHIP_HAS_UART=3",
     "-DRTOS",
+    "-DDEBUG=1",
     "-DCMSIS_OS_VER=2",
     "-DOS_HWI_MAX_NUM=96",
     "-D__FPU_PRESENT=1"
