--- a/bes2600w/components/drivers/drivers.gni
+++ b/bes2600w/components/drivers/drivers.gni
@@ -11,7 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//vendor/bestechnic/${product_name}/config.gni")
+import("../components.gni")
 
 hdf_include_dirs = [
     "//drivers/adapter/khdf/liteos_m/osal/include/",
