feat: add pack_burn and boot_zero options
Signed-off-by: leihuang <leihuang@bestechnic.com>
Change-Id: I1edce62bf94d8495da1102c75bc5809204924084

--- a/bes2600w/sdk_liteos/config.gni
+++ b/bes2600w/sdk_liteos/config.gni
@@ -44,6 +44,7 @@ if (product_path != "") {
     bin_list = product_conf.bin_list
     fs_list = product_conf.fs_list
     bsp_bin_list = product_conf.bsp_bin_list
+    pack_burn = product_conf.pack_burn
 }
 
 # Board related common compile flags.
