feat: update device for OpenHarmony-3.0-LTS
1. sync device 09358fe9c3
2. sync sdk dceba61c9dae

Signed-off-by: yangjian <jianyang@bestechnic.com>
Change-Id: If94298467f89c3cd4cddfa344b6ffc2be788b0db

--- a/bes2600w/sdk_liteos/config.gni
+++ b/bes2600w/sdk_liteos/config.gni
@@ -41,6 +41,7 @@ board_toolchain_type = "gcc"
 if (product_path != "") {
     product_conf = read_file("${product_path}/config.json", "json")
     product_name = product_conf.product_name
+    flash_partition_dir = product_conf.flash_partition_dir
     bin_list = product_conf.bin_list
     fs_list = product_conf.fs_list
     bsp_bin_list = product_conf.bsp_bin_list
