--- a/bes2600w/hals/communication/wifi_lite/wifiservice/BUILD.gn
+++ b/bes2600w/hals/communication/wifi_lite/wifiservice/BUILD.gn
@@ -11,8 +11,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-group("wifiservice") {
-  deps = [
-    "//device/bestechnic/${board_name}/components/communication/wifi_lite/wifiservice:wifiservice",
+static_library("wifiservice") {
+  sources = [
+    "wifi_device.c",
+    "wifi_hotspot.c",
+  ]
+  include_dirs = [
+    "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
+    "//foundation/distributedschedule/interfaces/kits/samgr_lite/samgr",
+    "//foundation/communication/wifi_lite/interfaces/wifiservice",
+    "//device/bestechnic/${board_name}/sdk_liteos/bsp/net/wifi/",
+    "//device/bestechnic/${board_name}/sdk_liteos/bsp/include/rtos/liteos/liteos_m/kal/cmsis/",
   ]
 }
