feat:components add net lwip module and hi_watchdog
Signed-off-by: yangjian <jianyang@bestechnic.com>
Change-Id: I107f722ef3b5bced1e9b3718fef7472ce6bdda4a

--- a/bes2600w/components/components.gni
+++ b/bes2600w/components/components.gni
@@ -20,7 +20,7 @@ declare_args() {
   ##################################################
   # components configurations
   ##################################################
-  bes_communication_wifi_lite_enable = false
+  bes_communication_wifi_lite_enable = true
 
   bes_drivers_gpio_enable = false
   bes_drivers_i2c_enable = false
