--- a/bes2600w/sdk_liteos/config.gni
+++ b/bes2600w/sdk_liteos/config.gni
@@ -126,6 +126,9 @@ if (wrap_fs_api == "true") {
 
 # Board related headfiles search path.
 board_include_dirs = [
+    "${ohos_root_path}device/bestechnic/${board_name}/components/watchdog/",
+    "${ohos_root_path}device/bestechnic/${board_name}/components/net/lwip-2.1/porting/include/",
+    "${ohos_root_path}third_party/lwip/src/include/",
     "${ohos_root_path}utils/native/lite/include",
     "${ohos_root_path}kernel/liteos_m/kal/cmsis",
     "${ohos_root_path}kernel/liteos_m/utils/",
