feat:add watchdog adapter
Signed-off-by: yangjian <jianyang@bestechnic.com>
Change-Id: Id8d04efe8f62491204b696e2b4640e8871472c61

--- a/bes2600w/components/components.gni
+++ b/bes2600w/components/components.gni
@@ -38,6 +38,7 @@ declare_args() {
   bes_ui_enable = false
   bes_ace_enable = false
   bes_ability_enable = false
+  bes_watchdog_enable = false
 
   ##################################################
   # test configurations
