feat:support module_ActsWifiIotTest
Signed-off-by: yangjian <jianyang@bestechnic.com>
Change-Id: I3d771f79416d27cdbf8e81db158853094e1dadeb

--- a/bes2600w/hals/iot_hardware/wifiiot_lite/BUILD.gn
+++ b/bes2600w/hals/iot_hardware/wifiiot_lite/BUILD.gn
@@ -14,11 +14,18 @@
 static_library("hal_iothardware") {
   sources = [
     "hal_iot_watchdog.c",
+    "hal_iot_flash.c",
+    "hal_iot_gpio.c",
+    "hal_iot_uart.c",
+    "hal_lowpower.c",
+    "hal_reset.c",
   ]
   include_dirs = [
     "//utils/native/lite/include",
     "//base/iot_hardware/peripheral/interfaces/kits",
-    "//device/hisilicon/hispark_pegasus/sdk_liteos/include",
+    "//device/bestechnic/bes2600w/components/drivers/flash",
+    "//device/bestechnic/bes2600w/components/drivers/gpio/",
+    "//drivers/adapter/khdf/liteos_m/osal/include/",
   ]
 
   deps = [
